--- a/lang/es-ES/lang.json
+++ b/lang/es-ES/lang.json
@@ -27,8 +27,8 @@
 	"26": "La autenticación de dos factores ya está activada.",
 	"27": "La autenticación de dos factores no está activada.",
 	"28": "El correo electrónico no está activado en este servidor.",
-	"29": "License key is invalid!",
-	"30": "This license key has already been used.",
+	"29": "¡La clave de licencia no es válida!",
+	"30": "Esta clave de licencia ya se ha utilizado.",
 	"300": "¡El sitio web es demasiado largo!",
 	"301": "¡El nombre de usuario es demasiado largo!",
 	"302": "¡La contraseña es demasiado larga!",
@@ -100,9 +100,9 @@
 	"password_generator": "Generar contraseña",
 	"delete_password": "Eliminar contraseña",
 	"delete_password_confirmation": "¿Esta seguro que desea eliminar su contraseña? Su contraseña será eliminada permanentemente del servidor. Esta acción NO puede revertirse.",
-	"delete_passwords": "Delete passwords",
-	"delete_passwords_info": "Deleted passwords can not be recovered.",
-	"delete_passwords_confirmation": "Are you sure you want to delete your passwords? Your passwords will be permanently removed from the server. This action can NOT be undone.",
+	"delete_passwords": "Eliminar contraseñas",
+	"delete_passwords_info": "Las contraseñas eliminadas no se pueden recuperar.",
+	"delete_passwords_confirmation": "¿Está seguro de que desea eliminar sus contraseñas? Sus contraseñas se eliminarán permanentemente del servidor. Esta acción no se puede deshacer.",
 	"delete_account": "Eliminar cuenta",
 	"delete_account_info": "Una vez eliminada su cuenta, perderá toda la información asociada a ella.",
 	"delete_account_confirmation": "¿Está seguro que desea eliminar su cuenta? Toda su información será eliminada permanentemente del servidor. Esta acción NO puede revertirse.",
@@ -131,28 +131,28 @@
 	"total_passwords": "Total de contraseñas",
 	"decryption_time": "Tiempo de descifrado",
 	"client_version": "Versión del cliente",
-	"upgrade_account": "Upgrade Account",
-	"validate": "Validate",
-	"license_key": "License Key",
-	"account": "Account",
-	"expiration": "Expiration",
-	"free": "Free",
-	"premium": "Premium",
-	"never": "Never",
-	"license_added_successfully": "Your account has been successfully upgraded to Premium and it will last until {date}.",
-	"please_wait": "PLEASE WAIT",
-	"saving_password": "Saving password...",
-	"changing_password": "Changing password...",
-	"deleting_password": "Deleting password...",
-	"deleting_passwords": "Deleting passwords...",
-	"deleting_account": "Deleting account...",
-	"signing_in": "Signing in...",
-	"signing_up": "Signing up...",
-	"sending_email": "Sending email...",
-	"enabling_2fa": "Enabling 2FA...",
-	"disabling_2fa": "Disabling 2FA...",
-	"adding_yubikey": "Adding Yubikey...",
-	"removing_yubikey": "Removing Yubikey...",
-	"validating_license": "Validating license key...",
-	"decrypting_passwords": "Decrypting passwords..."
+	"upgrade_account": "Actualizar cuenta",
+	"validate": "Validar",
+	"license_key": "Clave de licencia",
+	"account": "Cuenta",
+	"expiration": "Vencimiento",
+	"free": "Libre",
+	"premium": "Prémium",
+	"never": "Nunca",
+	"license_added_successfully": "Su cuenta se ha actualizado con éxito a Prémium y durará hasta él {date}.",
+	"please_wait": "ESPERE POR FAVOR",
+	"saving_password": "Guardando contraseña...",
+	"changing_password": "Cambiando contraseña...",
+	"deleting_password": "Eliminando contraseña...",
+	"deleting_passwords": "Eliminando contraseñas...",
+	"deleting_account": "Eliminando cuenta...",
+	"signing_in": "Iniciando sesión...",
+	"signing_up": "Registrarse...",
+	"sending_email": "Enviando correo electrónico...",
+	"enabling_2fa": "Habilitando 2FA...",
+	"disabling_2fa": "Deshabilitando 2FA...",
+	"adding_yubikey": "Agregando Yubikey...",
+	"removing_yubikey": "Eliminando Yubikey...",
+	"validating_license": "Validando clave de licencia...",
+	"decrypting_passwords": "Descifrando contraseñas..."
 }
