--- a/lang/hu/lang.json
+++ b/lang/hu/lang.json
@@ -4,7 +4,7 @@
 	"2": "A jelszó helytelen!",
 	"3": "Valami hiba történt az adatok adatbázisba való beillesztése közben!",
 	"4": "A felhasználónév már regisztrálva van!",
-	"5": "Your password is too weak!",
+	"5": "A jelszava túl gyenge!",
 	"6": "Az e-mail érvénytelen!",
 	"7": "Felhasználónév nem létezik!",
 	"8": "Nincs elmentett jelszava.",
@@ -16,143 +16,143 @@
 	"14": "A JSON érvénytelen!",
 	"15": "Ez a szerver nem tud több felhasználót fogadni!",
 	"16": "Elérted a maximum jelszók számát!",
-	"17": "Account with this email doesn't exist!",
-	"18": "Message is too long!",
-	"19": "OTP is incorrect!",
-	"20": "You can only link up to 5 Yubikeys!",
-	"21": "This Yubikey is already linked with your account.",
-	"23": "Provided Yubikey OTP is invalid!",
-	"24": "Yubikey with provided ID isn't linked to your account.",
-	"25": "The token is incorrect or it has expired. Please Sign in again.",
-	"26": "Two-factor authentication is already enabled.",
-	"27": "Two-factor authentication is not enabled.",
-	"28": "Mail is not enabled on this server.",
-	"29": "License key is invalid!",
-	"30": "This license key has already been used.",
-	"300": "Website is too long!",
-	"301": "Username is too long!",
-	"302": "Password is too long!",
-	"303": "Message is too long!",
-	"400": "Action was not provided in GET!",
-	"401": "Action is invalid!",
-	"403": "You didn't provide all required values in POST.",
+	"17": "Ehhez az email címhez nem tartozik fiók!",
+	"18": "Az üzenet túl hosszú!",
+	"19": "Az egyszeri jelszó helytelen!",
+	"20": "Legfeljebb 5 Yubikeyt csatolhat a fiókjához!",
+	"21": "Ez a Yubikey már hozzá volt adva a fiókjához.",
+	"23": "A megadott Yubikey egyszeri jelszó helytelen!",
+	"24": "A Yubikey a megadott ID-vel nincs a fiókjához csatolva.",
+	"25": "A bejelentkezési token helytelen vagy expirált. Kérjük, jelentkezzen be újra.",
+	"26": "A kétlépcsős hitelesítés már be van kapcsolva.",
+	"27": "Kétlépcsős hitelesítés kikapcsolva.",
+	"28": "A mail ki van kapcsolva ezen a szerveren.",
+	"29": "Licenc kulcs érvénytelen!",
+	"30": "Ez a licenc kúlcs már használt.",
+	"300": "A webcím túl hosszú!",
+	"301": "A felhasználónév túl hosszú!",
+	"302": "A jelszó túl hosszú!",
+	"303": "Az üzenet túl hosszú!",
+	"400": "GET kérelem művelet nélkül!",
+	"401": "Művelet érvénytelen!",
+	"403": "Hiányzó szükséges értékek a POST kérelemben.",
 	"404": "Nem lehet csatlakozni az API hoz.",
-	"429": "You are sending too many requests! Please wait before executing this action again.",
-	"505": "Something went wrong while connecting to the database!",
-	"506": "Something went wrong while connecting to the mail server!",
-	"999": "You do NOT have permission to use this endpoint.",
+	"429": "Túl sok kérvény! Kérjük, várjon mielőtt megismételi ezt a műveletet.",
+	"505": "Valami hiba történt az adatbázishoz való csatlakozás közben!",
+	"506": "Valami hiba történt a mail szerverhez való csatlakozás közben!",
+	"999": "Nincs engedélye ennek a végpont használatához.",
 	"server": "Kiszolgáló",
-	"website": "Website",
-	"username": "Username",
+	"website": "Weboldal",
+	"username": "Felhasználónév",
 	"email": "Email",
-	"password": "Password",
+	"password": "Jelszó",
 	"signin": "Bejelentkezés",
 	"signup": "Regisztráció",
 	"signout": "Kijelentkezés",
-	"terms_of_service": "Terms of Service",
-	"okay": "Okay",
-	"add": "Add",
+	"terms_of_service": "Felhasználási feltételek",
+	"okay": "Oké",
+	"add": "Hozzáadás",
 	"change": "Változtatás",
-	"use": "Use",
-	"copy": "Copy",
-	"send": "Send",
-	"cancel": "Cancel",
-	"try_again": "Try again",
-	"success": "SUCCESS",
-	"error": "ERROR",
-	"enable": "Enable",
-	"disable": "Disable",
-	"remove": "Remove",
-	"delete": "Delete",
-	"import": "Import",
-	"importing": "Importing",
-	"importing_passwords": "Importing {amount} passwords...",
-	"import_from": "Import from {name}",
-	"import_paste": "Paste {type} data from {name} password manager.",
-	"import_invalid": "The data in your import is invalid!",
-	"import_success": "{success_number} passwords imported successfully!",
-	"import_errors": "{success_number} passwords imported successfully, but {error_number} passwords NOT imported!",
-	"backup": "Backup",
-	"export": "Export",
-	"passwords": "Passwords",
-	"import_export": "Import & Export",
-	"language": "Language",
-	"theme": "Theme",
-	"search": "Search",
-	"length": "Length",
-	"settings": "Settings",
-	"minutes": "minutes",
-	"optional_note": "Optional Note",
-	"session_duration": "Session Duration",
-	"website_icons": "Website Icons",
-	"website_icons_info": "Enabling website icons might reduce your privacy.",
-	"only_browser_extension": "Only available in the browser extension.",
-	"missing_language": "Missing language? Translate it on {name}.",
-	"forgot_username": "Forgot username?",
-	"email_sent_success": "Email sent successfully",
-	"add_password": "Add password",
-	"add_password_success": "Password has been added successfully",
-	"change_password_success": "Password has been changed successfully",
-	"remove_password_success": "Password has been removed successfully",
-	"copy_password_success": "Password has been copied successfully",
-	"copy_username_success": "Username has been copied successfully",
-	"edit_password": "Change password",
-	"password_generator": "Generate password",
-	"delete_password": "Delete password",
-	"delete_password_confirmation": "Are you sure you want to delete your password? Your password will be permanently removed from the server. This action can NOT be undone.",
-	"delete_passwords": "Delete passwords",
-	"delete_passwords_info": "Deleted passwords can not be recovered.",
-	"delete_passwords_confirmation": "Are you sure you want to delete your passwords? Your passwords will be permanently removed from the server. This action can NOT be undone.",
-	"delete_account": "Delete account",
-	"delete_account_info": "Once you delete your account, you will lose all data associated with it.",
-	"delete_account_confirmation": "Are you sure you want to delete your account? All of your data will be permanently removed from the server. This action can NOT be undone.",
-	"url_invalid": "Server url is invalid!",
-	"server_unreachable": "Server is unreachable!",
-	"registration_completed": "Registration is completed!",
-	"dont_have_account_link": "Don't have an account yet? Sign up here.",
-	"already_have_account_link": "Already registered? Sign in here.",
-	"username_validation": "Username should be between 2 and 100 characters long!",
-	"password_validation": "Password should be between 2 and 100 characters long!",
-	"website_validation": "Website should be between 2 and 100 characters long!",
-	"otp_contains": "OTP contains 6 numbers.",
-	"otp_not_setup": "If you did not setup 2FA on your account leave this field empty.",
-	"enable_2fa_question": "Are you sure you want to enable Two-Factor Authentication?",
-	"disable_2fa_question": "Are you sure you want to disable Two-Factor Authentication?",
-	"totp_applications": "Before enabling, make sure you have installed one of the following applications on your phone:",
-	"scan_qr_code": "Scan QR Code:",
-	"or_enter_key_manually": "or enter key manually:",
-	"backup_codes": "Backup codes:",
-	"yubikey_added_successfully": "Your Yubikey has been added successfully",
-	"yubikey_removed_successfully": "Your Yubikey has been removed successfully",
-	"yubikey_insert_device": "1. Insert your Yubikey into the computer",
-	"yubikey_focus_input": "2. Click on OTP Input",
-	"yubikey_press_button": "3. Press the gold button located on your Yubikey",
-	"auto_search": "Auto Search",
-	"total_passwords": "Total Passwords",
-	"decryption_time": "Decryption Time",
-	"client_version": "Client Version",
-	"upgrade_account": "Upgrade Account",
-	"validate": "Validate",
-	"license_key": "License Key",
-	"account": "Account",
-	"expiration": "Expiration",
-	"free": "Free",
-	"premium": "Premium",
-	"never": "Never",
-	"license_added_successfully": "Your account has been successfully upgraded to Premium and it will last until {date}.",
-	"please_wait": "PLEASE WAIT",
-	"saving_password": "Saving password...",
-	"changing_password": "Changing password...",
-	"deleting_password": "Deleting password...",
-	"deleting_passwords": "Deleting passwords...",
-	"deleting_account": "Deleting account...",
-	"signing_in": "Signing in...",
-	"signing_up": "Signing up...",
-	"sending_email": "Sending email...",
-	"enabling_2fa": "Enabling 2FA...",
-	"disabling_2fa": "Disabling 2FA...",
-	"adding_yubikey": "Adding Yubikey...",
-	"removing_yubikey": "Removing Yubikey...",
-	"validating_license": "Validating license key...",
-	"decrypting_passwords": "Decrypting passwords..."
+	"use": "Használás",
+	"copy": "Másolás",
+	"send": "Küldés",
+	"cancel": "Mégsem",
+	"try_again": "Újrapróbálás",
+	"success": "SIKER",
+	"error": "HIBA",
+	"enable": "Bekapcsolás",
+	"disable": "Kikapcsolás",
+	"remove": "Eltávolítás",
+	"delete": "Törlés",
+	"import": "Importálás",
+	"importing": "Importálás",
+	"importing_passwords": "{amount} jelszó importálása folyamatban...",
+	"import_from": "Importálás {name}-ból/-ből",
+	"import_paste": "Kérjük illesztje be a(z) {type} adatokat a {name} jelszókezelőből.",
+	"import_invalid": "Az importált adatok helytelenek!",
+	"import_success": "{success_number} jelszó sikeresen importálva!",
+	"import_errors": "{success_number} jelszó sikeresen importálva, de sajnos {error_number} jelszavat NEM sikerült importálni!",
+	"backup": "Biztonsági mentés",
+	"export": "Exportálás",
+	"passwords": "Jelszavak",
+	"import_export": "Importálás & Exportálás",
+	"language": "Nyelv",
+	"theme": "Téma",
+	"search": "Keresés",
+	"length": "Hossz",
+	"settings": "Beállítások",
+	"minutes": "perc",
+	"optional_note": "Opcionális megjegyzés",
+	"session_duration": "Munkamenet időtartama",
+	"website_icons": "Weboldal ikonok",
+	"website_icons_info": "A weboldal ikonok bekapcsolása gyengítheti az adatai biztonságát.",
+	"only_browser_extension": "Kizárólag a böngésző bővítményben elérhető.",
+	"missing_language": "Hiányzó nyelv? Fordítsa le a {name} segítségével.",
+	"forgot_username": "Elfelejtett felhasználónév?",
+	"email_sent_success": "E-mail sikeresen elküldve",
+	"add_password": "Jelszó hozzáadása",
+	"add_password_success": "A jelszó sikeresen hozzáadva",
+	"change_password_success": "A jelszó sikeresen módosítva",
+	"remove_password_success": "A jelszó sikeresen eltávolítva",
+	"copy_password_success": "A jelszó sikeresen másolva",
+	"copy_username_success": "A felhasználónév sikeresen másolva",
+	"edit_password": "Jelszó módosítása",
+	"password_generator": "Jelszó generálás",
+	"delete_password": "Jelszó törlése",
+	"delete_password_confirmation": "Biztos, hogy törölni szeretné a jelszavát? A jelszava véglegesen törölve lesz a szerverről. Ez a művelet NEM visszavonható.",
+	"delete_passwords": "Jelszavak törlése",
+	"delete_passwords_info": "Törölt jelszavakat nem lehet helyreállítani.",
+	"delete_passwords_confirmation": "Biztos, hogy törölni szeretné a jelszavait? A jelszavai véglegesen törölve lesznek a szerverről. Ez a művelet NEM visszavonható.",
+	"delete_account": "Fiók törlése",
+	"delete_account_info": "Miután törli fiókját, az összes kapcsolódó adat elveszik.",
+	"delete_account_confirmation": "Biztos, hogy törölni szeretné a fiókját? Az összes adata véglegesen törölve lesz a szerverről. Ez a művelet NEM visszavonható.",
+	"url_invalid": "A szerver url helytelen!",
+	"server_unreachable": "A szerver nem elérhető!",
+	"registration_completed": "Regisztráció befejezve!",
+	"dont_have_account_link": "Még nincs fiókja? Itt regisztráljon.",
+	"already_have_account_link": "Már van fiókja? Jelentkezzen be itt.",
+	"username_validation": "A felhasználónévnek 2 és 100 karakter között kell lennie!",
+	"password_validation": "A jelszónak 2 és 100 karakter között kell lennie!",
+	"website_validation": "A weboldalnak 2 és 100 karakter között kell lennie!",
+	"otp_contains": "Az egyszeri jelszónak 6 számot kell tartalmaznia.",
+	"otp_not_setup": "Ha még nem kapcsolta be a kétlépcsős hitelesítést, kérjük hagyja ezt a mezőt üresen.",
+	"enable_2fa_question": "Biztosan be szeretné kapcsolni a kétlépcsős hitelesítést?",
+	"disable_2fa_question": "Biztosan ki szeretné kapcsolni a kétlépcsős hitelesítést?",
+	"totp_applications": "Mielőtt bekapcsolná, kérjük bizonyosodjon be arról, hogy az alábbiak közül az egyik alkalmazást telepítette a telefonjára:",
+	"scan_qr_code": "QR kód beolvasása:",
+	"or_enter_key_manually": "vagy adja meg a kulcsot kézileg:",
+	"backup_codes": "Tartalék kódok:",
+	"yubikey_added_successfully": "A Yubikey sikeresen hozzáadva",
+	"yubikey_removed_successfully": "A Yubikey sikeresen eltávolítva",
+	"yubikey_insert_device": "1. Illesztje be a Yubikey-jét a számítógépbe",
+	"yubikey_focus_input": "2. Nyomja meg az OTP Input gombot",
+	"yubikey_press_button": "3. Nyomja meg a Yubikey-jén található arany gombot",
+	"auto_search": "Automatikus keresés",
+	"total_passwords": "Jelszavak összesen",
+	"decryption_time": "Dekódolási idő",
+	"client_version": "Kliens verzió",
+	"upgrade_account": "Fiók bővítése",
+	"validate": "Érvényesítés",
+	"license_key": "Licenc kulcs",
+	"account": "Fiók",
+	"expiration": "Lejárat",
+	"free": "Ingyenes",
+	"premium": "Prémium",
+	"never": "Soha",
+	"license_added_successfully": "A fiókja sikeresen bővítve lett prémiumra, {date} dátumig.",
+	"please_wait": "KÉRJÜK VÁRJON",
+	"saving_password": "Jelszó mentése...",
+	"changing_password": "Jelszó módosítása...",
+	"deleting_password": "Jelszó törlése...",
+	"deleting_passwords": "Jelszavak törlése...",
+	"deleting_account": "Fiók törlése...",
+	"signing_in": "Bejelentkezés...",
+	"signing_up": "Regisztráció...",
+	"sending_email": "E-mail küldése...",
+	"enabling_2fa": "Kétlépcsős hitelesítés bekapcsolása...",
+	"disabling_2fa": "Kétlépcsős hitelesítés kikapcsolása...",
+	"adding_yubikey": "Yubikey hozzáadása...",
+	"removing_yubikey": "Yubikey eltávolítása...",
+	"validating_license": "Licenc kulcs érvényesítése...",
+	"decrypting_passwords": "Jelszavak dekódolása..."
 }
