--- a/lang/ko/lang.json
+++ b/lang/ko/lang.json
@@ -140,19 +140,19 @@
 	"premium": "프리미엄",
 	"never": "절대",
 	"license_added_successfully": "귀하의 계정은 프리미엄으로 성공적으로 업그레이드되었으며 {date} 까지 유지됩니다.",
-	"please_wait": "PLEASE WAIT",
-	"saving_password": "Saving password...",
-	"changing_password": "Changing password...",
-	"deleting_password": "Deleting password...",
-	"deleting_passwords": "Deleting passwords...",
-	"deleting_account": "Deleting account...",
-	"signing_in": "Signing in...",
-	"signing_up": "Signing up...",
-	"sending_email": "Sending email...",
-	"enabling_2fa": "Enabling 2FA...",
-	"disabling_2fa": "Disabling 2FA...",
-	"adding_yubikey": "Adding Yubikey...",
-	"removing_yubikey": "Removing Yubikey...",
-	"validating_license": "Validating license key...",
-	"decrypting_passwords": "Decrypting passwords..."
+	"please_wait": "기다리세요",
+	"saving_password": "비밀번호 저장 중...",
+	"changing_password": "비밀번호 변경 중...",
+	"deleting_password": "비밀번호 삭제 중...",
+	"deleting_passwords": "비밀번호 삭제 중...",
+	"deleting_account": "계정 삭제 중...",
+	"signing_in": "로그인...",
+	"signing_up": "가입 중...",
+	"sending_email": "이메일을 보내는 중...",
+	"enabling_2fa": "2FA 사용 설정 중...",
+	"disabling_2fa": "2FA 비활성화 중...",
+	"adding_yubikey": "유비키 추가 중...",
+	"removing_yubikey": "유비키 제거 중...",
+	"validating_license": "라이센스 키 확인 중...",
+	"decrypting_passwords": "암호 해독 중..."
 }
