--- a/lang/pl/lang.json
+++ b/lang/pl/lang.json
@@ -27,8 +27,8 @@
 	"26": "Uwierzytelnianie dwuskładnikowe jest już włączone.",
 	"27": "Uwierzytelnianie dwuskładnikowe nie jest włączone.",
 	"28": "Mail nie jest włączony na tym serwerze.",
-	"29": "License key is invalid!",
-	"30": "This license key has already been used.",
+	"29": "Klucz licencyjny jest nieprawidłowy!",
+	"30": "Ten klucz licencyjny został już użyty.",
 	"300": "Strona jest za długa!",
 	"301": "Nazwa użytkownika jest zbyt długa!",
 	"302": "Hasło jest za długie!",
@@ -68,7 +68,7 @@
 	"importing": "Importowanie",
 	"importing_passwords": "Importowanie haseł w liczbie: {amount}...",
 	"import_from": "Importuj z {name}",
-	"import_paste": "Paste {type} data from {name} password manager.",
+	"import_paste": "Wklej dane {type} z menedżera haseł {name}.",
 	"import_invalid": "Importowane dane są nieprawidłowe!",
 	"import_success": "Pomyślnie zaimportowano {success_number} haseł!",
 	"import_errors": "Pomyślnie zaimportowano {success_number} haseł, {error_number} haseł NIE udało się zaimportować!",
@@ -87,7 +87,7 @@
 	"website_icons": "Ikony witryny",
 	"website_icons_info": "Włączenie ikon witryny może zmniejszyć Twoją prywatność.",
 	"only_browser_extension": "Dostępne tylko w rozszerzeniu przeglądarki.",
-	"missing_language": "Missing language? Translate it on {name}.",
+	"missing_language": "Brakuje Ci języka? Przetłumacz to na {name}.",
 	"forgot_username": "Nie pamiętasz nazwy użytkownika?",
 	"email_sent_success": "E-mail wysłany pomyślnie",
 	"add_password": "Dodaj hasło",
@@ -100,9 +100,9 @@
 	"password_generator": "Wygeneruj hasło",
 	"delete_password": "Usuń hasło",
 	"delete_password_confirmation": "Czy masz pewność, że chcesz usunąć swoje hasło? Twoje hasło zostanie trwale usunięte z serwera. Tej akcji NIE można cofnąć.",
-	"delete_passwords": "Delete passwords",
-	"delete_passwords_info": "Deleted passwords can not be recovered.",
-	"delete_passwords_confirmation": "Are you sure you want to delete your passwords? Your passwords will be permanently removed from the server. This action can NOT be undone.",
+	"delete_passwords": "Usuń hasła",
+	"delete_passwords_info": "Usuniętych haseł nie można odzyskać.",
+	"delete_passwords_confirmation": "Czy na pewno chcesz usunąć swoje hasła? Twoje hasła zostaną trwale usunięte z serwera. Tej czynności NIE można cofnąć.",
 	"delete_account": "Usuń konto",
 	"delete_account_info": "Po usunięciu konta stracisz wszystkie powiązane z nim dane.",
 	"delete_account_confirmation": "Czy masz pewność, że chcesz usunąć swoje konto? Wszystkie Twoje dane zostaną trwale usunięte z serwera. Tej akcji NIE można cofnąć.",
@@ -131,28 +131,28 @@
 	"total_passwords": "Wszystkich haseł",
 	"decryption_time": "Czas odszyfrowania",
 	"client_version": "Wersja klienta",
-	"upgrade_account": "Upgrade Account",
-	"validate": "Validate",
-	"license_key": "License Key",
-	"account": "Account",
-	"expiration": "Expiration",
-	"free": "Free",
-	"premium": "Premium",
-	"never": "Never",
-	"license_added_successfully": "Your account has been successfully upgraded to Premium and it will last until {date}.",
-	"please_wait": "PLEASE WAIT",
-	"saving_password": "Saving password...",
-	"changing_password": "Changing password...",
-	"deleting_password": "Deleting password...",
-	"deleting_passwords": "Deleting passwords...",
-	"deleting_account": "Deleting account...",
-	"signing_in": "Signing in...",
-	"signing_up": "Signing up...",
-	"sending_email": "Sending email...",
-	"enabling_2fa": "Enabling 2FA...",
-	"disabling_2fa": "Disabling 2FA...",
-	"adding_yubikey": "Adding Yubikey...",
-	"removing_yubikey": "Removing Yubikey...",
-	"validating_license": "Validating license key...",
-	"decrypting_passwords": "Decrypting passwords..."
+	"upgrade_account": "Ulepsz konto",
+	"validate": "Uprawomocnić",
+	"license_key": "Klucz licencyjny",
+	"account": "Rachunek",
+	"expiration": "Wygaśnięcie\n",
+	"free": "Bezpłatny",
+	"premium": "Premia",
+	"never": "Nigdy",
+	"license_added_successfully": "Twoje konto zostało pomyślnie uaktualnione do Premium i będzie aktywne do {date}.",
+	"please_wait": "PROSZĘ CZEKAĆ",
+	"saving_password": "Zapisywanie hasła...",
+	"changing_password": "Zmiana hasła...",
+	"deleting_password": "Usuwanie hasła...",
+	"deleting_passwords": "Usuwanie haseł...\n",
+	"deleting_account": "Usuwanie konta...",
+	"signing_in": "Dołączanie do...",
+	"signing_up": "Logować się...",
+	"sending_email": "Wysyłać email...",
+	"enabling_2fa": "Włączanie 2FA...",
+	"disabling_2fa": "Wyłączanie 2FA...",
+	"adding_yubikey": "Dodawanie YubiKey'ego...\n",
+	"removing_yubikey": "Usuwanie Yubikey'ego...",
+	"validating_license": "Weryfikowanie klucza licencyjnego...",
+	"decrypting_passwords": "Odszyfrowywanie haseł..."
 }
