--- a/lang/ro/lang.json
+++ b/lang/ro/lang.json
@@ -2,9 +2,9 @@
 	"0": "Reușit",
 	"1": "Numele de utilizator nu este valid!",
 	"2": "Parola este incorectă!",
-	"3": "Something went wrong while inserting data to the database!",
+	"3": "Ceva a mers prost la inserarea datelor în baza de date!",
 	"4": "Numele de utilizator este deja înregistrat!",
-	"5": "Your password is too weak!",
+	"5": "Parola dvs. este prea slabă!",
 	"6": "Adresa de e-mail este invalida!",
 	"7": "Numele de utilizator nu există!",
 	"8": "Nu aveți nicio parolă salvată.",
@@ -16,30 +16,30 @@
 	"14": "Json-ul nu este valid!",
 	"15": "Acest server nu poate accepta mai mulți utilizatori!",
 	"16": "Ați atins numărul maxim de parole stocate!",
-	"17": "Account with this email doesn't exist!",
-	"18": "Message is too long!",
-	"19": "OTP is incorrect!",
-	"20": "You can only link up to 5 Yubikeys!",
-	"21": "This Yubikey is already linked with your account.",
-	"23": "Provided Yubikey OTP is invalid!",
-	"24": "Yubikey with provided ID isn't linked to your account.",
-	"25": "The token is incorrect or it has expired. Please Sign in again.",
-	"26": "Two-factor authentication is already enabled.",
-	"27": "Two-factor authentication is not enabled.",
-	"28": "Mail is not enabled on this server.",
-	"29": "License key is invalid!",
-	"30": "This license key has already been used.",
-	"300": "Website is too long!",
-	"301": "Username is too long!",
-	"302": "Password is too long!",
-	"303": "Message is too long!",
-	"400": "Action was not provided in GET!",
+	"17": "Contul cu acest e-mail nu există!",
+	"18": "Mesajul este prea lung!",
+	"19": "OTP este incorect!",
+	"20": "Puteți conecta doar până la 5 Yubikey-uri!",
+	"21": "Acest Yubikey este deja conectat la contul tău.",
+	"23": "Cu condiția ca Yubikey OTP să fie invalid!",
+	"24": "Yubikey cu ID furnizat nu este conectat la contul dvs.",
+	"25": "Indicatorul este incorect sau a expirat. Vă rugăm să vă conectați din nou.",
+	"26": "Autentificarea cu doi factori este deja activată.",
+	"27": "Autentificarea cu doi factori nu este activată.",
+	"28": "Poșta nu este activată pe acest server.",
+	"29": "Cheia de licență este nevalidă!",
+	"30": "Această cheie de licență a fost deja utilizată.",
+	"300": "Site-ul este prea lung!",
+	"301": "Numele de utilizator este prea lung!",
+	"302": "Parola este prea lungă!",
+	"303": "Mesajul este prea lung!",
+	"400": "Acțiunea nu a fost furnizată în GET!",
 	"401": "Acțiunea nu este validă!",
 	"403": "Nu ați furnizat toate valorile necesare în POST.",
 	"404": "Nu se poate conecta la API.",
 	"429": "Trimiteți prea multe solicitări! Vă rugăm să așteptați înainte de a executa din nou această acțiune.",
 	"505": "A apărut o eroare la conectarea la baza de date!",
-	"506": "Something went wrong while connecting to the mail server!",
+	"506": "A apărut o eroare în timpul conectării la serverul de e-mail!",
 	"999": "NU aveți permisiunea de a utiliza acest endpoint.",
 	"server": "Server",
 	"website": "Website",
@@ -49,26 +49,26 @@
 	"signin": "Conectare",
 	"signup": "Înregistrare",
 	"signout": "Deconectare",
-	"terms_of_service": "Terms of Service",
+	"terms_of_service": "Termenii serviciului",
 	"okay": "Bine",
 	"add": "Adăuga",
 	"change": "Schimbă",
 	"use": "Utilizează",
 	"copy": "Copiază",
-	"send": "Send",
+	"send": "Trimite",
 	"cancel": "Anulează",
 	"try_again": "Încearcă din nou",
 	"success": "SUCCES",
 	"error": "EROARE",
-	"enable": "Enable",
-	"disable": "Disable",
-	"remove": "Remove",
+	"enable": "Permite",
+	"disable": "Dezactivați",
+	"remove": "Elimina",
 	"delete": "Șterge",
 	"import": "Importă",
-	"importing": "Importing",
-	"importing_passwords": "Importing {amount} passwords...",
+	"importing": "Importing\n",
+	"importing_passwords": "Se importă {amount} parole...",
 	"import_from": "Importă din {name}",
-	"import_paste": "Paste {type} data from {name} password manager.",
+	"import_paste": "Inserați datele {type} din managerul de parole {name}.",
 	"import_invalid": "Datele din importul dvs. nu sunt valide!",
 	"import_success": "{success_number} parole importate cu succes!",
 	"import_errors": "{success_number} parole importate cu succes, dar {error_number} parole NU au fost importate!",
@@ -76,33 +76,33 @@
 	"export": "Exportă",
 	"passwords": "Parole",
 	"import_export": "Importă & Exportă",
-	"language": "Language",
+	"language": "Limba",
 	"theme": "Temă",
 	"search": "Caută",
 	"length": "Lungime",
-	"settings": "Settings",
+	"settings": "Setări",
 	"minutes": "minutes",
-	"optional_note": "Optional Note",
-	"session_duration": "Session Duration",
-	"website_icons": "Website Icons",
-	"website_icons_info": "Enabling website icons might reduce your privacy.",
-	"only_browser_extension": "Only available in the browser extension.",
-	"missing_language": "Missing language? Translate it on {name}.",
-	"forgot_username": "Forgot username?",
-	"email_sent_success": "Email sent successfully",
+	"optional_note": "Notă opțională",
+	"session_duration": "Durata sesiunii",
+	"website_icons": "Pictogramele site-ului web",
+	"website_icons_info": "Activarea pictogramelor site-ului vă poate reduce confidențialitatea.",
+	"only_browser_extension": "Disponibil numai în extensia browserului.",
+	"missing_language": "Limbă lipsă? Traduceți-l pe {name}.",
+	"forgot_username": "Ai uitat numele de utilizator?",
+	"email_sent_success": "Email-ul a fost trimis cu succes",
 	"add_password": "Adăugați o parolă",
 	"add_password_success": "Parola a fost adăugată cu succes",
 	"change_password_success": "Parola a fost schimbată cu succes",
 	"remove_password_success": "Parola a fost eliminată cu succes",
-	"copy_password_success": "Password has been copied successfully",
-	"copy_username_success": "Username has been copied successfully",
+	"copy_password_success": "Parola a fost copiată cu succes",
+	"copy_username_success": "Numele de utilizator a fost copiat cu succes",
 	"edit_password": "Schimbați parola",
 	"password_generator": "Generați parola",
 	"delete_password": "Ștergeți parola",
 	"delete_password_confirmation": "Sigur doriți să ștergeți parola? Parola dvs. va fi eliminată definitiv de pe server. Această acțiune nu poate fi anulată.",
-	"delete_passwords": "Delete passwords",
-	"delete_passwords_info": "Deleted passwords can not be recovered.",
-	"delete_passwords_confirmation": "Are you sure you want to delete your passwords? Your passwords will be permanently removed from the server. This action can NOT be undone.",
+	"delete_passwords": "Ștergeți parolele",
+	"delete_passwords_info": "Parolele șterse nu pot fi recuperate.",
+	"delete_passwords_confirmation": "Sigur doriți să vă ștergeți parolele? Parolele tale vor fi șterse definitiv de pe server. Această acțiune nu poate fi anulată.",
 	"delete_account": "Șterge contul",
 	"delete_account_info": "După ce vă ștergeți contul, veți pierde toate datele asociate acestuia.",
 	"delete_account_confirmation": "Sigur doriți să vă ștergeți contul? Toate datele dvs. vor fi șterse definitiv de pe server. Această acțiune nu poate fi anulată.",
@@ -111,48 +111,48 @@
 	"registration_completed": "Înregistrarea este finalizată!",
 	"dont_have_account_link": "Nu aveți încă un cont? Înscrieți-vă aici.",
 	"already_have_account_link": "Deja înregistrat? Conectați-vă aici.",
-	"username_validation": "Username should be between 2 and 100 characters long!",
-	"password_validation": "Password should be between 2 and 100 characters long!",
-	"website_validation": "Website should be between 2 and 100 characters long!",
-	"otp_contains": "OTP contains 6 numbers.",
-	"otp_not_setup": "If you did not setup 2FA on your account leave this field empty.",
-	"enable_2fa_question": "Are you sure you want to enable Two-Factor Authentication?",
-	"disable_2fa_question": "Are you sure you want to disable Two-Factor Authentication?",
-	"totp_applications": "Before enabling, make sure you have installed one of the following applications on your phone:",
-	"scan_qr_code": "Scan QR Code:",
-	"or_enter_key_manually": "or enter key manually:",
-	"backup_codes": "Backup codes:",
-	"yubikey_added_successfully": "Your Yubikey has been added successfully",
-	"yubikey_removed_successfully": "Your Yubikey has been removed successfully",
-	"yubikey_insert_device": "1. Insert your Yubikey into the computer",
-	"yubikey_focus_input": "2. Click on OTP Input",
-	"yubikey_press_button": "3. Press the gold button located on your Yubikey",
-	"auto_search": "Auto Search",
-	"total_passwords": "Total Passwords",
-	"decryption_time": "Decryption Time",
-	"client_version": "Client Version",
-	"upgrade_account": "Upgrade Account",
-	"validate": "Validate",
-	"license_key": "License Key",
-	"account": "Account",
-	"expiration": "Expiration",
-	"free": "Free",
+	"username_validation": "Numele de utilizator trebuie să aibă între 2 și 100 de caractere!",
+	"password_validation": "Parola trebuie să aibă între 2 și 100 de caractere!",
+	"website_validation": "Site-ul ar trebui să aibă între 2 și 100 de caractere!",
+	"otp_contains": "OTP conține 6 numere.",
+	"otp_not_setup": "Dacă nu ați configurat 2FA în contul dvs., lăsați acest câmp necompletat.",
+	"enable_2fa_question": "Sigur doriți să activați autentificarea cu doi factori?",
+	"disable_2fa_question": "Sigur doriți să dezactivați autentificarea cu doi factori?",
+	"totp_applications": "Înainte de a activa, asigurați-vă că ați instalat una dintre următoarele aplicații pe telefon:",
+	"scan_qr_code": "Scanați codul QR:",
+	"or_enter_key_manually": "sau introduceți manual cheia:",
+	"backup_codes": "Coduri de rezervă:",
+	"yubikey_added_successfully": "Yubikey-ul dvs. a fost adăugat cu succes",
+	"yubikey_removed_successfully": "Yubikey-ul dvs. a fost eliminat cu succes",
+	"yubikey_insert_device": "1. Introduceți Yubikey-ul în computer",
+	"yubikey_focus_input": "2. Faceți clic pe OTP Input",
+	"yubikey_press_button": "3. Apăsați butonul auriu situat pe Yubikey",
+	"auto_search": "Căutare automată",
+	"total_passwords": "Total parole",
+	"decryption_time": "Timp de decriptare",
+	"client_version": "Versiune client",
+	"upgrade_account": "Actualizare cont",
+	"validate": "Valida",
+	"license_key": "Cheie de licență",
+	"account": "Cont",
+	"expiration": "Expirare",
+	"free": "Gratuit",
 	"premium": "Premium",
-	"never": "Never",
-	"license_added_successfully": "Your account has been successfully upgraded to Premium and it will last until {date}.",
-	"please_wait": "PLEASE WAIT",
-	"saving_password": "Saving password...",
-	"changing_password": "Changing password...",
-	"deleting_password": "Deleting password...",
-	"deleting_passwords": "Deleting passwords...",
-	"deleting_account": "Deleting account...",
-	"signing_in": "Signing in...",
-	"signing_up": "Signing up...",
-	"sending_email": "Sending email...",
-	"enabling_2fa": "Enabling 2FA...",
-	"disabling_2fa": "Disabling 2FA...",
-	"adding_yubikey": "Adding Yubikey...",
-	"removing_yubikey": "Removing Yubikey...",
-	"validating_license": "Validating license key...",
-	"decrypting_passwords": "Decrypting passwords..."
+	"never": "Niciodată!",
+	"license_added_successfully": "Contul dvs. a fost actualizat cu succes la Premium și va dura până la {date}.",
+	"please_wait": "VA RUGAM ASTEPTATI",
+	"saving_password": "Se salvează parola...",
+	"changing_password": "Se schimbă parola...",
+	"deleting_password": "Se șterge parola...",
+	"deleting_passwords": "Se șterg parolele...",
+	"deleting_account": "Se șterge contul...",
+	"signing_in": "Conectare...",
+	"signing_up": "Înscrierea...",
+	"sending_email": "Se trimite e-mail...\n",
+	"enabling_2fa": "Se activează 2FA...",
+	"disabling_2fa": "Se dezactivează 2FA...",
+	"adding_yubikey": "Se adaugă Yubikey...",
+	"removing_yubikey": "Se elimină Yubikey...",
+	"validating_license": "Se validează cheia de licență...\n",
+	"decrypting_passwords": "Se decriptează parolele..."
 }
