--- a/lang/ru/lang.json
+++ b/lang/ru/lang.json
@@ -146,7 +146,7 @@
 	"deleting_password": "Удаление пароля...",
 	"deleting_passwords": "Удаление паролей...",
 	"deleting_account": "Удаление учётной записи...",
-	"signing_in": "Выполняется вход...",
+	"signing_in": "Вход...",
 	"signing_up": "Регистрация...",
 	"sending_email": "Отправка эл. письма...",
 	"enabling_2fa": "Включение 2FA...",
